Add reference site information

--- a/Titanic/EDA.ipynb
+++ b/Titanic/EDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1fPcGAyvLFxy9d5ba3ptJCPikhSy7MeHk",
-      "authorship_tag": "ABX9TyO7iWPghEnNQZl6wvK+Sqsm",
+      "authorship_tag": "ABX9TyOFh8nkL9wD9s48+kkA4K44",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,16 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/keee1/kaggle/blob/main/Titanic/EDA.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "参考にしたサイト：\n",
+        "https://qiita.com/5sigma_AAA/items/0c23907da9330681147b"
+      ],
+      "metadata": {
+        "id": "wYNbx443r3PI"
+      }
     },
     {
       "cell_type": "code",
