--- a/Titanic/EDA.ipynb
+++ b/Titanic/EDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1fPcGAyvLFxy9d5ba3ptJCPikhSy7MeHk",
-      "authorship_tag": "ABX9TyOFh8nkL9wD9s48+kkA4K44",
+      "authorship_tag": "ABX9TyPncJLI20pRTSiS6s9q2RHw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,10 @@
       "cell_type": "markdown",
       "source": [
         "参考にしたサイト：\n",
-        "https://qiita.com/5sigma_AAA/items/0c23907da9330681147b"
+        "https://qiita.com/5sigma_AAA/items/0c23907da9330681147b\n",
+        "\n",
+        "LightGBM\n",
+        "https://puntadata.com/lightgbm_sample_explain/"
       ],
       "metadata": {
         "id": "wYNbx443r3PI"
@@ -136,7 +139,7 @@
       "metadata": {
         "id": "RahiRPUkP3_M"
       },
-      "execution_count": 8,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -171,7 +174,7 @@
       "metadata": {
         "id": "v71SLOf2um0X"
       },
-      "execution_count": 11,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -194,7 +197,7 @@
       "metadata": {
         "id": "D4qzIzVEQr70"
       },
-      "execution_count": 13,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -205,7 +208,7 @@
       "metadata": {
         "id": "H73yqHNDQyGj"
       },
-      "execution_count": 14,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -243,7 +246,7 @@
       "metadata": {
         "id": "nXHWadWQUdQt"
       },
-      "execution_count": 17,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -254,25 +257,92 @@
       "metadata": {
         "id": "bFJUAzRiUru9"
       },
-      "execution_count": 18,
+      "execution_count": 38,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.metrics import (roc_curve , auc ,accuracy_score, precision_score)\n",
+        "import lightgbm as lgb\n",
         "\n",
-        "clf = RandomForestClassifier(n_estimators = 12,max_depth=10,random_state = 0)\n",
-        "clf = clf.fit(train_X , train_Y)\n",
-        "pred = clf.predict(test_X)\n",
-        "fpr, tpr , thresholds = roc_curve(test_Y,pred,pos_label = 1)\n",
-        "auc(fpr,tpr)\n",
-        "print(accuracy_score(pred,test_Y))\n",
-        "print(precision_score(pred, test_Y))"
+        "train_data = lgb.Dataset(train_X, label=train_Y, free_raw_data=False)\n",
+        "train_data.save_binary('/content/drive/MyDrive/Kaggle/Titanic/train.bin')\n",
+        "valid_data = lgb.Dataset(test_X, label=test_Y, free_raw_data=False)\n",
+        "valid_data.save_binary('/content/drive/MyDrive/Kaggle/Titanic/valid.bin')"
       ],
       "metadata": {
-        "id": "ujlw3jmKgjZB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ujlw3jmKgjZB",
+        "outputId": "97b2d323-2aad-47c2-eae8-21bb11bc5652"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[LightGBM] [Warning] File /content/drive/MyDrive/Kaggle/Titanic/train.bin exists, cannot save binary to it\n",
+            "[LightGBM] [Warning] File /content/drive/MyDrive/Kaggle/Titanic/valid.bin exists, cannot save binary to it\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<lightgbm.basic.Dataset at 0x78d64b34b610>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "param = {   'random_state': 0 ,\n",
+        "            'objective': 'binary',\n",
+        "            'metric': 'binary_error',\n",
+        "}\n",
+        "param['metric'] = ['auc', 'binary_logloss']\n",
+        "\n",
+        "bst = lgb.LGBMClassifier(**param)\n",
+        "bst.fit(train_X, train_Y)"
+      ],
+      "metadata": {
+        "id": "FBiemQJMuu3a"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num_round = 50\n",
+        "bst = lgb.train(param, train_data, num_round, valid_sets=[valid_data])\n",
+        "bst.save_model('/content/drive/MyDrive/Kaggle/Titanic/model.txt', num_iteration=bst.best_iteration)"
+      ],
+      "metadata": {
+        "id": "Y0mEnRW9u55_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import (roc_curve , auc ,accuracy_score, precision_score)\n",
+        "pred = bst.predict_proba(test_X)\n",
+        "print(pred[:5])\n",
+        "pred = bst.predict(test_X)\n",
+        "print(pred[:5])\n",
+        "fpr, tpr , thresholds = roc_curve(test_Y,pred,pos_label = 1)\n",
+        "auc(fpr,tpr)"
+      ],
+      "metadata": {
+        "id": "ZIpOh1aaxT35"
       },
       "execution_count": null,
       "outputs": []
@@ -306,7 +376,7 @@
         "testDf['Embarked'] = testDf['Embarked'].map( {'S': 0 , 'C':1 , 'Q':2}).astype(int)\n",
         "\n",
         "testDf= testDf.drop(['Cabin','Name','Ticket','PassengerId'],axis =1)\n",
-        "pred = clf.predict(testDf)\n",
+        "pred = bst.predict(testDf)\n",
         "\n",
         "submission = pd.DataFrame({'PassengerId':passsengerid, 'Survived':pred})\n",
         "submission.to_csv('/content/drive/MyDrive/Kaggle/Titanic/submission.csv' , index = False)"
@@ -314,7 +384,16 @@
       "metadata": {
         "id": "PB7eNamug5Ed"
       },
-      "execution_count": 21,
+      "execution_count": 101,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "C24JTL4ozp8j"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
